# war-of-cells

./: CMakeLists.txt  LICENSE
include/: globals.h  renderer.h  simulation.h
src/: main.c  renderer.c  simulation.c
